add proceed duration

--- a/options/options.html
+++ b/options/options.html
@@ -14,9 +14,11 @@
     </div>
 
     <div id="timer-message-options">
-      <h2>Timer and Message Options</h2>
+      <h2>Timers and Message Options</h2>
       Indicate how many seconds you want the timer to be:
       <br> <input id="timer-duration" type="number" min="1" value="5">
+      <br><br>Indicate how many seconds you want before you see the intervention again:
+      <br> <input id="proceed-duration" type="number" min="1" value="20">
       <br><br> Indicate what message you want the extension to show you.
       <br> Default is : "Take a deep breath".
       <br> <input id="customize-message">
