add onInstalled open options

--- a/options/options.html
+++ b/options/options.html
@@ -12,6 +12,8 @@
 	<div class="container-fluid p-5 border bg-primary">
 		<p class="h1 text-bg-primary">Options Page</p>
 		<br>
+		<p class="text-bg-primary">👋🏻 Hi there! Welcome to the Time Management extension! Please fill in the following options to get started.</p>
+		<br>
 		<div id="website-list-div">
 			<p class="h2 text-bg-primary">Websites List</p>
 			<ul id="websites-list" class="list-group"></ul>
@@ -34,7 +36,8 @@
 
 		</div>
 		<br>
-		<div id="status"></div>
+		<div id="status" class="text-bg-primary"></div>
+		<br>
 		<button id="save">Save</button>
 
 		<script src="options.js"></script>
