--- a/options/options.html
+++ b/options/options.html
@@ -12,7 +12,7 @@
 	<div class="container-fluid p-5 border bg-primary">
 		<p class="h1 text-bg-primary">Options Page</p>
 		<br>
-		<p class="text-bg-primary">👋🏻 Hi there! Welcome to the Time Management extension! Please fill in the following options to get started.</p>
+		<p class="text-bg-primary">Hi there! Welcome to the Time Management extension! Please fill in the following options to get started.</p>
 		<br>
 		<div id="website-list-div">
 			<p class="h2 text-bg-primary">Websites List</p>
